# wasmplayer

./: README.md
core/: .gitignore  CMakeLists.txt  build.sh  build_ffmpeg.sh  env.example.sh  glue.js  main.cpp  player.cpp  player.h
core/cmake/: Emscripten.cmake
core/src/: ffprobe.cpp  ffprobe.h
web/: index.html  index.js  worker.js
